# libxstd

./: .appveyor.yml  .gitignore  .travis.yml  CHANGELOG.md  CMakeLists.txt  README.md  appveyor.yml  changelog.sh
cmake/: doxyfile.in
doc/html/: annotated.html  bug.html  classes.html  classxstd_1_1DateTime-members.html  classxstd_1_1DateTime.html  classxstd_1_1Directory-members.html  classxstd_1_1Directory.html  classxstd_1_1Directory__coll__graph.map  classxstd_1_1Directory__coll__graph.md5  classxstd_1_1Directory__inherit__graph.map  classxstd_1_1Directory__inherit__graph.md5  classxstd_1_1FileInfo-members.html  classxstd_1_1FileInfo.html  classxstd_1_1FileName-members.html  classxstd_1_1FileName.html  classxstd_1_1FileName__coll__graph.md5  classxstd_1_1FileName__inherit__graph.map  classxstd_1_1Settings-members.html  classxstd_1_1Settings.html  classxstd_1_1Settings__coll__graph.map  classxstd_1_1Settings__coll__graph.md5  datetime_8cpp.html  datetime_8cpp__incl.map  datetime_8cpp__incl.md5  datetime_8h.html  datetime_8h__dep__incl.map  datetime_8h__dep__incl.md5  datetime_8h__incl.map  datetime_8h__incl.md5  datetime_8h_source.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  directory_8cpp.html  directory_8cpp__incl.map  directory_8cpp__incl.md5  directory_8h.html  directory_8h__dep__incl.map  directory_8h__dep__incl.md5  directory_8h__incl.map  directory_8h__incl.md5  directory_8h_source.html  (+63 more)
files/: changelog.sh  cmake.sh  doxyfile.in  format.sh  make.sh  tab2space.sh
src/: .directory.cpp.swp  .fileinfo.h.swp  CMakeLists.txt  datetime.cpp  datetime.h  directory.cpp  directory.h  fileinfo.cpp  fileinfo.h  filename.cpp  filename.h  settings.cpp  settings.h  xstd.cpp  xstd.h
src/examples/: CMakeLists.txt  datetime.cpp  directory.cpp  fileinfo.cpp  filename.cpp
